[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-doctor"
version = "0.1.0"
description = "OpenClaw 配置自动修复和心跳监控工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "OpenClaw Community", email = "support@openclaw.ai" }
]
keywords = ["openclaw", "monitoring", "automation", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
openclaw-doctor = "openclaw_doctor.cli:main"

[project.urls]
Homepage = "https://github.com/nidao003/openclaw-doctor-skills"
Repository = "https://github.com/nidao003/openclaw-doctor-skills"

[tool.setuptools.packages.find]
where = ["src"]
include = ["openclaw_doctor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
